--- a/06-AvanzadasGoogleAds/6.1-RepasoCampañas.md
+++ b/06-AvanzadasGoogleAds/6.1-RepasoCampañas.md
@@ -2,3 +2,55 @@
 ## Tipos de Campañas
 
 ![alt text](image.png)
+
+Cada tipo de campaña tiene un propósito específico y se dirige a distintos aspectos del viaje del consumidor. A continuación, proporcionamos un resumen de cada tipo de campaña revisada:
+
+### Campañas de Búsqueda
+Las campañas de búsqueda, comúnmente gestionadas a través de Google Ads, están diseñadas para mostrar anuncios a los usuarios que buscan activamente palabras clave relacionadas con tus productos o servicios. Estas campañas son altamente efectivas para captar la demanda existente y son esenciales para capturar leads y ventas desde usuarios con intenciones claras de compra o interacción.
+- **Objetivo**: Captar usuarios en el momento en que buscan tus productos o servicios.
+- **Ventajas**: Alta intención de los usuarios, lo que a menudo conduce a mejores tasas de conversión.
+
+### Campañas de Display
+Las campañas de display utilizan visuales atractivos y se muestran en una red de sitios asociados. Estos anuncios pueden ser de naturaleza gráfica o en video y son útiles para construir reconocimiento de marca y retargeting, mostrando anuncios a usuarios que previamente han interactuado con tu sitio web o aplicación.
+- **Objetivo**: Aumentar la notoriedad de la marca y re-engagement de los visitantes del sitio.
+- **Ventajas**: Amplio alcance y capacidad para segmentar según el comportamiento del usuario y el contenido del sitio.
+
+### Campañas de Shopping
+Específicas para comercios electrónicos, estas campañas promueven productos directamente en los resultados de búsqueda y plataformas de compra. Utilizan los feeds de productos del comerciante para generar automáticamente anuncios que muestran productos, precios y una breve descripción.
+- **Objetivo**: Conducir ventas directas desde plataformas de búsqueda como Google Shopping.
+- **Ventajas**: Presentación directa del producto en el momento en que el potencial cliente está considerando una compra.
+
+### Campañas para Aplicaciones
+Diseñadas para promover aplicaciones móviles, estas campañas pueden ejecutarse en múltiples plataformas como Google Ads, Facebook, y más. Buscan incrementar las instalaciones y el engagement de aplicaciones a través de anuncios que enlazan directamente a las tiendas de aplicaciones.
+- **Objetivo**: Aumentar las descargas de aplicaciones y fomentar interacciones dentro de la aplicación.
+- **Ventajas**: Focalización en la adquisición de usuarios nuevos y retención de los actuales mediante el re-engagement.
+
+## Implementación Estratégica
+Para cada tipo de campaña, es crucial definir claramente los objetivos, entender el público objetivo y seleccionar la plataforma adecuada para maximizar el impacto. La optimización continua basada en datos de rendimiento permite ajustar las campañas para mejorar los resultados y lograr los objetivos de marketing digital de manera eficaz.
+
+Al cierre de esta semana, los estudiantes habrán desarrollado una comprensión sólida de cuándo y cómo implementar cada tipo de campaña publicitaria digital para alinearlas con los objetivos estratégicos del negocio o cliente.
+
+## Checklist de Optimización de Campañas
+Antes de escalar o realizar cambios importantes en una campaña, utiliza este checklist para asegurarte de que esté optimizada al máximo:
+
+### Revisión de Métricas Clave
+- *CTR* (Click Through Rate):
+    - Mide la relevancia de tus anuncios. Si es bajo, revisa el copy y el título.
+- **Conversiones**:
+    - Asegúrate de que las acciones específicas (compra, registro, etc.) estén cumpliendo los objetivos establecidos.
+- **ROAS** (Return on Ad Spend):
+    - Evalúa si el retorno de la inversión publicitaria justifica el gasto.
+
+### Audiencias
+Analiza si la segmentación actual está generando resultados positivos. Considera:
+- Ajustar intereses o comportamientos si la interacción es baja.
+- Añadir exclusiones, como usuarios que ya completaron la acción deseada.
+
+### Creatividades
+- ¿Los anuncios están captando atención?
+    - Asegúrate de que los visuales y textos sean relevantes y atractivos.
+- Realiza pruebas A/B con diferentes títulos, CTAs y formatos.
+
+### Presupuesto
+- Evalúa si el gasto diario está alineado con los resultados obtenidos.
+- Ajusta presupuestos hacia campañas con mayor rendimiento.
